--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -11,6 +11,15 @@ header {
     display: flex;
 }
 
+.header-items {
+    display: flex;
+    height: 8vh;
+    margin: auto;
+    flex: 1 70%;
+    padding: 10px;
+    justify-content: space-around;
+}
+
 header * {
     // flex: 1 25%;
     // justify-content: space-around;
@@ -21,6 +30,8 @@ header * {
 header h1 {
     font-size: 1.3em;
     font-weight: 100;
+    flex: 1 50%;
+    padding: 20px;
 }
 header h3 {
     font-size: .9em;
@@ -30,9 +41,9 @@ header h3 {
 }
 
 header img {
-    // height: 15px;
-    padding: 10px;
-    margin: 2px;
+    max-width: 100%;
+    max-height: 100%;
+    margin: 1px;
 }
 hr {
     height: 60%;
@@ -58,15 +69,16 @@ a {
     color: white;
 }
 
+.main-nav {
+    padding-right: 30px;
+    padding-left: 30px;
+}
+
 a img {
     height: 35px;
     width: 35px;
     margin: 10px;
     filter: invert(1);
-}
-
-.headline {
-    font-weight: 400;
 }
 
 .member-img {
